sh exec_test.sh  gc/metaspace/TestMetaspacePerfCounters